--- a/frontpage.html
+++ b/frontpage.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html html {
-    scroll-behavior: smooth;
-}
+<html style="scroll-behavior: smooth;">
 <head>
     <title>Home | Vincent's Keynotes</title>
-    <title>Vincent's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="frontpage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
